fix tests for jdk8