@@ -6,11 +6,13 @@ import seamcarving.MainKt;
 
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
+import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.Arrays;
 import java.util.List;
 
 
@@ -35,11 +37,21 @@ class OutFile {
 
     public boolean compareWithActualMD5() throws CheckFailException {
         try {
+            File imgPath = new File(filename);
+            BufferedImage bufferedImage = ImageIO.read(imgPath);
+
+            ByteArrayOutputStream baos = new ByteArrayOutputStream();
+            ImageIO.write(bufferedImage, "bmp", baos);
+
             MessageDigest md = MessageDigest.getInstance("MD5");
-            md.update(new FileInputStream(filename).readAllBytes());
+            md.update(baos.toByteArray());
             byte[] digest = md.digest();
-            if (!Hex.encodeHexString(digest).equalsIgnoreCase(hash)) {
-                throw new CheckFailException("Hash sum of your image does not match expected value");
+            String actualHash = Hex.encodeHexString(digest);
+            if (!actualHash.equalsIgnoreCase(hash)) {
+                throw new CheckFailException(
+                        String.format(
+                                "Hash sum of your image (%s) does not match expected value",
+                                actualHash));
             }
         } catch (IOException e) {
             throw new CheckFailException(
@@ -99,18 +111,18 @@ public class SeamCarvingTest extends BaseStageTest<OutFile> {
     @Override
     public List<TestCase<OutFile>> generate() {
 
-        return List.of(
+        return Arrays.asList(
                 new TestCase<OutFile>()
                         .addArguments("-in", "small.png", "-out", "small-energy.png")
-                        .setAttach(new OutFile("small-energy.png", 15, 10, "f67dee140f6ac86e2289a5c91cda377e")),
+                        .setAttach(new OutFile("small-energy.png", 15, 10, "931d2f37bb499ef6892db026f57525ba")),
 
                 new TestCase<OutFile>()
                         .addArguments("-in", "blue.png", "-out", "blue-energy.png")
-                        .setAttach(new OutFile("blue-energy.png", 500, 334, "c0653a6283515bf9791b4e5544dad3b1")),
+                        .setAttach(new OutFile("blue-energy.png", 500, 334, "0bdde2d55124785b16df005088f17e1a")),
 
                 new TestCase<OutFile>()
                         .addArguments("-in", "trees.png", "-out", "trees-energy.png")
-                        .setAttach(new OutFile("trees-energy.png", 600, 429, "4eb912d893aab6b80979d533277f40b7"))
+                        .setAttach(new OutFile("trees-energy.png", 600, 429, "89c4037e6c0b0de040d9fb85e4450ebc"))
         );
     }
 
