@@ -6,11 +6,13 @@ import seamcarving.MainKt;
 
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
+import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.Arrays;
 import java.util.List;
 
 
@@ -35,11 +37,21 @@ class OutFile {
 
     public boolean compareWithActualMD5() throws CheckFailException {
         try {
+            File imgPath = new File(filename);
+            BufferedImage bufferedImage = ImageIO.read(imgPath);
+
+            ByteArrayOutputStream baos = new ByteArrayOutputStream();
+            ImageIO.write(bufferedImage, "bmp", baos);
+
             MessageDigest md = MessageDigest.getInstance("MD5");
-            md.update(new FileInputStream(filename).readAllBytes());
+            md.update(baos.toByteArray());
             byte[] digest = md.digest();
-            if (!Hex.encodeHexString(digest).equalsIgnoreCase(hash)) {
-                throw new CheckFailException("Hash sum of your image does not match expected value");
+            String actualHash = Hex.encodeHexString(digest);
+            if (!actualHash.equalsIgnoreCase(hash)) {
+                throw new CheckFailException(
+                        String.format(
+                                "Hash sum of your image (%s) does not match expected value",
+                                actualHash));
             }
         } catch (IOException e) {
             throw new CheckFailException(
@@ -99,18 +111,18 @@ public class SeamCarvingTest extends BaseStageTest<OutFile> {
     @Override
     public List<TestCase<OutFile>> generate() {
 
-        return List.of(
+        return Arrays.asList(
                 new TestCase<OutFile>()
                         .addArguments("-in", "small.png", "-out", "small-seam.png")
-                        .setAttach(new OutFile("small-seam.png", 15, 10, "0c60a2f38c84f23964815b2952f899d1")),
+                        .setAttach(new OutFile("small-seam.png", 15, 10, "831b2b94d6ca3ae71a8aacec4e5b5e23")),
 
                 new TestCase<OutFile>()
                         .addArguments("-in", "blue.png", "-out", "blue-seam.png")
-                        .setAttach(new OutFile("blue-seam.png", 500, 334, "3eb404d87b40c124fe0267deb1bcdbe5")),
+                        .setAttach(new OutFile("blue-seam.png", 500, 334, "bfde19c2d97092e104b14fd07f2cf5f3")),
 
                 new TestCase<OutFile>()
                         .addArguments("-in", "trees.png", "-out", "trees-seam.png")
-                        .setAttach(new OutFile("trees-seam.png", 600, 429, "41f89fb6effa1e7a9901b63cfe72958e"))
+                        .setAttach(new OutFile("trees-seam.png", 600, 429, "9298d037e2defc97a1b35e8abddafb02"))
         );
     }
 
