@@ -6,11 +6,13 @@ import seamcarving.MainKt;
 
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
+import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.Arrays;
 import java.util.List;
 
 class CheckFailException extends Exception {
@@ -34,11 +36,21 @@ class OutFile {
 
     public boolean compareWithActualMD5() throws CheckFailException {
         try {
+            File imgPath = new File(filename);
+            BufferedImage bufferedImage = ImageIO.read(imgPath);
+
+            ByteArrayOutputStream baos = new ByteArrayOutputStream();
+            ImageIO.write(bufferedImage, "bmp", baos);
+
             MessageDigest md = MessageDigest.getInstance("MD5");
-            md.update(new FileInputStream(filename).readAllBytes());
+            md.update(baos.toByteArray());
             byte[] digest = md.digest();
-            if (!Hex.encodeHexString(digest).equalsIgnoreCase(hash)) {
-                throw new CheckFailException("Hash sum of your image does not match expected value");
+            String actualHash = Hex.encodeHexString(digest);
+            if (!actualHash.equalsIgnoreCase(hash)) {
+                throw new CheckFailException(
+                        String.format(
+                                "Hash sum of your image (%s) does not match expected value",
+                                actualHash));
             }
         } catch (IOException e) {
             throw new CheckFailException(
@@ -98,18 +110,18 @@ public class SeamCarvingTest extends BaseStageTest<OutFile> {
     @Override
     public List<TestCase<OutFile>> generate() {
 
-        return List.of(
+        return Arrays.asList(
                 new TestCase<OutFile>()
                         .addArguments("-in", "small.png", "-out", "small-reduced.png", "-width", "1", "-height", "1")
-                        .setAttach(new OutFile("small-reduced.png", 14, 9, "c58a0cca79215ea9253a92e31144afee")),
+                        .setAttach(new OutFile("small-reduced.png", 14, 9, "3e0266a991347682591a4955c9b2dd8e")),
 
                 new TestCase<OutFile>()
                         .addArguments("-in", "blue.png", "-out", "blue-reduced.png", "-width", "125", "-height", "50")
-                        .setAttach(new OutFile("blue-reduced.png", 375, 284, "e17afe69c7e11e8b0e39638bb8a1fd7f")),
+                        .setAttach(new OutFile("blue-reduced.png", 375, 284, "e73c04ad79d30ebef82b27f35b71dd92")),
 
                 new TestCase<OutFile>()
                         .addArguments("-in", "trees.png", "-out", "trees-reduced.png", "-width", "100", "-height", "30")
-                        .setAttach(new OutFile("trees-reduced.png", 500, 399, "19d5f72aa67dbdd8d965a0407a5c914f"))
+                        .setAttach(new OutFile("trees-reduced.png", 500, 399, "65603cba81d3ee6dedeeb5777d6665c5"))
         );
     }
 
